# fsq-mac

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  llms.txt  pyproject.toml
.claude/skills/: mac-automation.md
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: BDD_integration_prd.md  agent-contract.json  agent-playbook.md  architecture-review.md  architecture.md  cli-reference.md  openapi.json  plugins.md  quickstart.md  releasing.md  trace-codegen.md
docs/assets/: README.md  demo-recording-plan.md
docs/plans/: 2026-04-03-phase0-foundation-design.md  2026-04-03-phase0-implementation.md  2026-04-03-phase2-core-differentiators-design.md  2026-04-03-phase2-core-differentiators-implementation.md  2026-04-03-phase3-ci-design.md  2026-04-03-phase3-ci-implementation.md  2026-04-03-phase3-trace-loop-design.md  2026-04-03-phase3-trace-loop-implementation.md  2026-04-06-phase4-codegen-perf-plugins-docs.md  2026-04-07-timing-stability-remediation.md  2026-04-13-fsq-mac-qa-skill-design.md  2026-04-13-fsq-mac-qa-skill-implementation.md  2026-04-13-text-input-paste-first-design.md  2026-04-13-text-input-paste-first-implementation.md  2026-04-14-inspect-ref-actionability-contract-design.md  2026-04-14-inspect-ref-improvements-design.md  2026-04-14-inspect-ref-improvements-implementation.md
docs/testing/: manual-e2e-test-plan.md  phase-0-1-test-plan.md  (+1 more)
examples/: calculator-e2e.sh  trace-replay-codegen.sh
src/fsq_mac/: cli.py  (+10 more)
tests/: conftest.py  test_adapter_delays.py  test_adapter_helpers.py  test_adapter_methods.py  test_adapter_registry.py  test_agent_artifacts.py  test_auto_snapshot.py  test_ci_workflow.py  test_cli.py  test_cli_version.py  test_client.py  test_codegen.py  test_command_timeout.py  test_core.py  test_daemon.py  test_daemon_lock.py  test_doctor.py  test_error_propagation.py  test_find.py  test_formatters.py  test_inspect_refs.py  test_models.py  test_plugin_system.py  test_protocol.py  test_routes.py  test_screenshot.py  test_semantics.py  test_session.py  test_stale_ref_diagnostics.py  test_timeout.py  test_trace.py  test_tree_cache.py  test_type_core.py  test_type_verify.py
(+12 files in other folders)
