[project]
name = "fsq-mac"
version = "0.1.0"
description = "Agent-first macOS automation CLI"
requires-python = ">=3.10"
dependencies = [
    "appium-python-client>=2.0.0",
    "selenium>=4.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
]

[project.scripts]
mac = "fsq_mac.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fsq_mac"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
