[project]
name = "fsq-mac"
version = "0.3.1"
description = "Agent-first macOS automation CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["macos", "automation", "agent", "cli", "appium", "accessibility", "ui-testing", "llm", "ai-agent", "tool-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "appium-python-client>=2.0.0",
    "selenium>=4.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
]

[project.scripts]
mac = "fsq_mac.cli:main"

[project.entry-points."fsq_mac.adapters"]
appium_mac2 = "fsq_mac.adapters.appium_mac2:AppiumMac2Adapter"

[project.entry-points."fsq_mac.doctor"]

[project.urls]
Homepage = "https://github.com/houlianpi/fsq-mac"
Repository = "https://github.com/houlianpi/fsq-mac"
Documentation = "https://github.com/houlianpi/fsq-mac/tree/main/docs"
Changelog = "https://github.com/houlianpi/fsq-mac/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fsq_mac"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
